pkg/gox/testdata/errors/unclosed_fragment.gox
package demo

func View() any {
	return <><p>Broken</p>
}
